plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id "org.beryx.jlink" version '2.25.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

/**
 * The following argument ensures TextFields's AutoCompletionBinding works with TextField.
 * Taken from https://github.com/controlsfx/controlsfx/wiki/Using-ControlsFX-with-JDK-9-and-above#autocompletionbinding
 */
applicationDefaultJvmArgs = ["--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls"]

javafx {
    version = "17"
    modules = ['javafx.controls']
}

application {
    getMainClass().set("edu.bsu.cs222.view.MainWindow")
    getMainModule().set("edu.bsu.cs222.module-info")
    applicationDefaultJvmArgs = ['-Dgreeting.language=en']
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.1.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.7.0'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
}

test {
    useJUnitPlatform()
}
